# docs/swagger.json
@@ -4610,28 +4610,25 @@
         },
         "/settings": {
             "get": {
-                "description": "Get a list of all settings",
+                "description": "Get the default setting's details",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "settings"
                 ],
-                "summary": "List all settings",
+                "summary": "Get the default setting",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/service.Setting"
-                            }
+                            "$ref": "#/definitions/service.Setting"
                         }
                     }
                 }
             },
             "post": {
-                "description": "Create a new setting with the provided configuration",
+                "description": "Create or update the default setting with the provided configuration",
                 "consumes": [
                     "application/json"
                 ],
@@ -4641,7 +4638,7 @@
                 "tags": [
                     "settings"
                 ],
-                "summary": "Create a new setting",
+                "summary": "Create or update the default setting",
                 "parameters": [
                     {
                         "description": "Setting configuration",
@@ -4659,95 +4656,6 @@
                         "schema": {
                             "$ref": "#/definitions/service.Setting"
                         }
-                    }
-                }
-            }
-        },
-        "/settings/{id}": {
-            "get": {
-                "description": "Get a setting's details by its ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "settings"
-                ],
-                "summary": "Get a setting by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Setting ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/service.Setting"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update an existing setting by its ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "settings"
-                ],
-                "summary": "Update a setting",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Setting ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Updated setting configuration",
-                        "name": "setting",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/service.UpdateSettingParams"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/service.Setting"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete a setting by its ID",
-                "tags": [
-                    "settings"
-                ],
-                "summary": "Delete a setting",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Setting ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
                     }
                 }
             }
@@ -6982,8 +6890,7 @@
             "type": "object",
             "properties": {
                 "config": {
-                    "type": "object",
-                    "additionalProperties": true
+                    "$ref": "#/definitions/service.SettingConfig"
                 }
             }
         },
@@ -7252,8 +7159,7 @@
             "type": "object",
             "properties": {
                 "config": {
-                    "type": "object",
-                    "additionalProperties": true
+                    "$ref": "#/definitions/service.SettingConfig"
                 },
                 "created_at": {
                     "type": "string"
@@ -7262,6 +7168,20 @@
                     "type": "integer"
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.SettingConfig": {
+            "type": "object",
+            "properties": {
+                "besuTemplateCMD": {
+                    "type": "string"
+                },
+                "ordererTemplateCMD": {
+                    "type": "string"
+                },
+                "peerTemplateCMD": {
                     "type": "string"
                 }
             }
@@ -7289,15 +7209,6 @@
                 },
                 "type": {
                     "type": "string"
-                }
-            }
-        },
-        "service.UpdateSettingParams": {
-            "type": "object",
-            "properties": {
-                "config": {
-                    "type": "object",
-                    "additionalProperties": true
                 }
             }
         },
